Conectado al Backend

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@apollo/client": "^3.8.6",
     "apollo-angular": "^5.0.2",
     "graphql": "^16.8.1",
+    "ngx-bootstrap": "^11.0.2",
     "primeng": "^16.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
